added pagination for payments in profile and added tests